Сетки страниц на флексах

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,10 @@
 
 /* Основное */
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
@@ -25,6 +29,15 @@ body {
   color: #333333;
   background-color: #FFFFFF;
   text-align: center;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  width: 1200px;
+}
+
+.main-container {
+  flex-grow: 1;
 }
 
 .main-catalog {
@@ -40,33 +53,8 @@ body {
 }
 
 .heading-tagline {
-  color: #333333;
   margin: 0;
   padding: 0;
-}
-
-/* Хедер */
-
-.page-header {
-  text-align: left;
-}
-
-.navigation-link {
-  font-size: 20px;
-  line-height: 24px;
-  font-weight: 700;
-  color: #000000;
-  text-decoration: none; /* без подчёркивания */
-}
-
-/* Футер */
-
-.footer-address-phone {
-  font-size: 40px;
-  line-height: 40px;
-  font-style: normal;
-  color: #000000;
-  text-decoration: none; /* без подчёркивания */
 }
 
 /* Кнопки */
@@ -96,6 +84,78 @@ body {
   background-color: transparent;
 }
 
+/* Хедер */
+
+.page-header {
+  text-align: left;
+  display: flex;
+}
+
+.header-logo {
+  margin-left: 70px;
+}
+
+.main-navigation {
+  display: flex;
+  width: 892px;
+  padding-left: 30px;
+  padding-right: 70px;
+}
+
+.navigation-list {
+  width: 570px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.navigation-user {
+  width: 300px;
+  margin-left: auto;
+}
+
+.navigation-link {
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #000000;
+  text-decoration: none;
+  display: block;
+}
+
+.navigation-button {
+  font-size: 16px;
+  line-height: 20px;
+}
+
+/* Футер */
+
+.page-footer {
+  width: 1060px;
+  padding-left: 70px;
+  padding-right: 70px;
+  display: flex;
+}
+
+.social-list {
+  margin-right: auto;
+}
+
+.footer-address-phone {
+  width: 400px;
+  font-size: 40px;
+  line-height: 40px;
+  font-style: normal;
+  color: #000000;
+  text-decoration: none;
+}
+
+.htmlacademy-link {
+  margin-left: auto;
+}
+
+/* ГЛАВНАЯ */
+
 /* Приветствие */
 
 .hero {
@@ -115,7 +175,22 @@ body {
 
 /* Преимущества */
 
+.advantages-list, .services-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.advantages-item {
+  display: flex;
+}
+
 .reason {
+  width: 230px;
+  padding-left: 85px;
+  padding-right: 85px;
   font-size: 18px;
   line-height: 21px;
   background-color: rgba(131, 179, 211, 0.12);
@@ -145,6 +220,9 @@ body {
 /* Сервисы */
 
 .services-item {
+  width: 230px;
+  padding-left: 85px;
+  padding-right: 85px;
   font-size: 18px;
   line-height: 21px;
   background-color: rgba(131, 179, 211, 0.12);
@@ -170,6 +248,9 @@ body {
 
 .subscribe {
   text-align: center;
+  width: 684px;
+  padding-left: 258px;
+  padding-right: 258px;
 }
 
 .subscribe-index {
@@ -184,7 +265,12 @@ body {
   color: #FFFFFF;
 }
 
-/* Фильтры каталога */
+/* КАТАЛОГ */
+
+.catalog-header-title {
+  font-size: 60px;
+  line-height: 78px;
+}
 
 .catalog-container {
   background-color: #68A2CA;
@@ -193,4 +279,124 @@ body {
   background-size: 100% auto;
   background-repeat: no-repeat;
   text-align: left;
+  padding-left: 70px;
+  padding-right: 70px;
+}
+
+/* Хлебные крошки */
+
+.breadcrumbs {
+  list-style: none;
+}
+
+.breadcrumbs-link {
+  font-size: 16px;
+  line-height: 21px;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+/* Фильтры */
+
+.catalog-filter-form {
+  display: flex;
+}
+
+.filter-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.filter-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.control-label {
+  font-size: 18px;
+  line-height: 23px;
+}
+
+/* Слайдер */
+
+.filter-price {
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.filter-input {
+  font-weight: 700;
+}
+
+/* Список гостиниц */
+
+.catalog-content {
+  width: 1060px;
+  padding-left: 70px;
+  padding-right: 70px;
+}
+
+.search-result {
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.hotels-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* Карточка гостиницы */
+
+.hotels-card {
+  width: 300px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.hotels-description {
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.hotels-price {
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.hotels-link {
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+  text-decoration: none;
+}
+
+.hotels-rating {
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.hotels-button {
+  font-size: 16px;
+  line-height: 20px;
+}
+
+/* Пагинация */
+
+.pagination-list {
+  list-style: none;
+  display: flex;
+}
+
+.pagination-current {
+  color: #000000;
+  background-color: #F2F2F2;
 }
