--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,12 +139,12 @@ body {
 
 .navigation-list {
   width: 570px;
-  margin: 0;
-  padding: 0;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .navigation-user {
@@ -173,14 +173,21 @@ body {
 }
 
 .social-list {
-  margin-right: auto;
+  min-width: 142px;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  margin: 0;
+  margin-right: auto;
+  padding: 5px 0;
 }
 
-.footer-address-phone {
-  width: 400px;
+.footer-address {
+  width: 720px;
+  padding: 5px 0;
+}
+
+.footer-phone {
   font-size: 40px;
   line-height: 40px;
   font-style: normal;
@@ -189,6 +196,7 @@ body {
 }
 
 .htmlacademy-link {
+  width: 115px;
   margin-left: auto;
 }
 
@@ -538,42 +546,90 @@ body {
 /* Список гостиниц */
 
 .hotels-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 340px);
+  gap: 20px;
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-bottom: 40px;
 }
 
 /* Карточка гостиницы */
 
 .hotels-card {
-  width: 300px;
-  padding-left: 20px;
-  padding-right: 20px;
+  width: 298px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 140px);
+  row-gap: 16px;
+  column-gap: 20px;
+}
+
+.hotels-link {
+  grid-row: 1;
+  grid-column: -1/1;
+  color: #000000;
+  text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.hotels-image {
+  margin-bottom: 16px;
+}
+
+.hotels-title {
+  display: block;
+  margin: 0;
+  padding: 0;
+  font-size: 24px;
+  line-height: 28px;
 }
 
 .hotels-description {
+  grid-row: 2;
+  grid-column: 1;
   font-size: 18px;
   line-height: 21px;
 }
 
 .hotels-price {
+  grid-row: 2;
+  grid-column: 2;
   font-size: 18px;
   line-height: 21px;
+  font-weight: 400;
+  text-align: end;
 }
 
-.hotels-link {
-  font-size: 24px;
-  line-height: 28px;
-  color: #000000;
-  text-decoration: none;
+.hotels-button {
+  grid-row: 3;
+  grid-column: 1;
+  width: 120px;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.favorite {
+  grid-column: 2;
+}
+
+.hotels-stars {
+  grid-row: 4;
+  grid-column: 1;
 }
 
 .hotels-rating {
+  grid-row: 4;
+  grid-column: 2;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
+  text-align: end;
+  padding-top: 9px;
+  padding-bottom: 8px;
+  padding-right: 22px;
 }
 
 /* Пагинация */
