--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,17 +37,20 @@ body {
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
   line-height: 26px;
-  color: #333333;
-  background-color: #FFFFFF;
   text-align: center;
   margin: 0 auto;
+  padding: 0;
   display: flex;
   flex-direction: column;
   min-height: 100%;
   width: 1200px;
+  color: #333333;
+  background-color: #f2f2f2;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .main-container {
+  background-color: #ffffff;
   flex-grow: 1;
 }
 
@@ -79,12 +82,14 @@ body {
   line-height: 36px;
   font-weight: 700;
   text-align: center;
-  color: #FFFFFF;
-  background-color: #83B3D3;
+  color: #ffffff;
+  background-color: #83b3d3;
   text-decoration: none;
   text-transform: uppercase;
   border: none;
   padding: 8px 50px;
+  cursor: pointer;
+  border-radius: 4px;
 }
 
 .button-link {
@@ -92,7 +97,30 @@ body {
 }
 
 .favorite-selected {
-  background-color: #7DB54F;
+  background-color: #7db54f;
+}
+
+.button:hover, .button:focus {
+  background-color: #68a2ca;
+  outline: none;
+}
+
+.button-link:hover, .button-link:focus {
+  background-color: #615048;
+}
+
+.favorite-selected:hover, .favorite-selected:focus {
+  background-color: #6c9e42;
+}
+
+.button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button:disabled {
+  background-color: #e5e5e5;
+  color: #ffffff;
+  cursor: default;
 }
 
 .button-apply {
@@ -106,10 +134,31 @@ body {
   background-color: transparent;
 }
 
+.button-reset:hover {
+  background-color: transparent;
+  color:rgba(255, 255, 255, 0.6);
+}
+
+.button-reset:focus {
+  background-color: transparent;
+  outline: 3px solid #83b3d3;
+  outline-offset: -3px;
+}
+
+.button-reset:active {
+  background-color: transparent;
+  color:rgba(255, 255, 255, 0.3);
+}
+
+.button-reset:disabled {
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.1);
+}
+
 .navigation-button {
-  width: 140px;
   font-size: 16px;
   line-height: 20px;
+  margin-left: 20px;
 }
 
 .hotels-button {
@@ -124,16 +173,19 @@ body {
 .page-header {
   text-align: left;
   display: flex;
+  position: relative;
+  background-color: #ffffff;
 }
 
 .header-logo {
   margin-left: 70px;
+  position: absolute;
 }
 
 .main-navigation {
   display: flex;
   width: 892px;
-  padding-left: 30px;
+  padding-left: 238px;
   padding-right: 70px;
 }
 
@@ -161,11 +213,60 @@ body {
   text-decoration: none;
   display: block;
   padding: 20px 16px;
+  position: relative;
+}
+
+.navigation-link-current::after {
+  content: "";
+  display: block;
+  border-bottom: 2px solid #756257;
+  box-sizing: border-box;
+  position: absolute;
+  width: calc(100% - 32px);
+  bottom: -1px;
+}
+
+.user-link {
+  display: block;
+  width: 44px;
+  height: 64px;
+  cursor: pointer;
+  position: relative;
+  color: #000000;
+}
+
+.user-icon {
+  display: block;
+  margin: 0 auto;
+  padding-top: 22px;
+}
+
+.user-favorite::after {
+  position: absolute;
+  content: "12";
+  font-size: 10px;
+  line-height: 20px;
+  text-align: center;
+  color: #ffffff;
+  width: 20px;
+  top: 11px;
+  left: 20px;
+  border-radius: 50%;
+  background-color: #7db54f;
+}
+
+.navigation-link:hover, .navigation-link:focus, .user-link:hover, .user-link:focus {
+  color: #756157;
+}
+
+.navigation-link:active, .user-link:active {
+  color: rgba(117, 97, 87, 0.3);
 }
 
 /* Футер */
 
 .page-footer {
+  background-color: #ffffff;
   width: 1060px;
   padding: 40px 70px 30px;
   display: flex;
@@ -178,8 +279,20 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  margin-right: auto;
   padding: 5px 0;
+}
+
+.social-button {
+  color: #83b3d3;
+}
+
+.social-button:hover, .social-button:focus {
+  color: #68a2ca;
+  outline: none;
+}
+
+.social-button:active {
+  color: rgba(104, 162, 202, 0.3);
 }
 
 .footer-address {
@@ -195,9 +308,27 @@ body {
   text-decoration: none;
 }
 
+.footer-phone:hover, .footer-phone:focus {
+  color: rgba(117, 97, 87, 1);
+  outline: none;
+}
+
+.footer-phone:active {
+  color:rgba(117, 97, 87, 0.3);
+}
+
 .htmlacademy-link {
   width: 115px;
-  margin-left: auto;
+  color: #000000;
+}
+
+.htmlacademy-link:hover, .htmlacademy-link:focus {
+  color: #756157;
+  outline: none;
+}
+
+.htmlacademy-link:active {
+  color: rgba(117, 97, 87, 0.3);
 }
 
 /* ГЛАВНАЯ */
@@ -205,8 +336,8 @@ body {
 /* Приветствие */
 
 .hero {
-  color: #FFFFFF;
-  background-color: #68A2CA;
+  color: #ffffff;
+  background-color: #68a2ca;
   background-image: url("../images/index/hero-background.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -246,6 +377,7 @@ body {
 }
 
 .reason {
+  position: relative;
   width: 230px;
   min-height: 228px;
   padding: 112px 85px 45px;
@@ -257,8 +389,8 @@ body {
 .reason-photo {
   min-height: 238px;
   padding-top: 102px;
-  background-color: #83B3D3;
-  color: #FFFFFF;
+  background-color: #83b3d3;
+  color: #ffffff;
 }
 
 .reason-order {
@@ -281,7 +413,22 @@ body {
 }
 
 .reason-photo .reason-title {
-  color: #FFFFFF
+  color: #ffffff;
+}
+
+.reason-title::after {
+  display: block;
+  position: relative;
+  top: 30px;
+  content: "";
+  margin: 0 auto;
+  width: 60px;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.reason-photo .reason-title::after {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .reason-tagline {
@@ -315,7 +462,7 @@ body {
 }
 
 .services-food {
-  background-color:#FFFFFF;
+  background-color:#ffffff;
   background-image: url("../images/index/svg/services-food.svg");
   background-repeat: no-repeat;
 }
@@ -350,8 +497,8 @@ body {
 }
 
 .subscribe-index {
-  background-color: #68A2CA;
-  color: #FFFFFF;
+  background-color: #68a2ca;
+  color: #ffffff;
   background-image: url("../images/index/subscribe-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -362,7 +509,7 @@ body {
 }
 
 .subscribe-index .subscribe-title {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .subscribe-tagline {
@@ -373,26 +520,49 @@ body {
 
 .subscribe-form {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   margin-bottom: 8px;
 }
 
 .subscribe-input {
+  background-color: #f2f2f2;
   width: 412px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 14px;
-  padding-bottom: 14px;
+  padding: 14px 20px;
   border: none;
+  font-size: 18px;
+  line-height: 24px;
+  border-radius: 4px 0 0 4px;
+}
+
+.subscribe-button {
+  width: 232px;
+  border-radius: 0 4px 4px 0;
+}
+
+.subscribe-input::placeholder {
+  font-family: "PT Sans", sans-serif;
+  color: #000000;
+  opacity: 60%;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.subscribe-input:hover, .subscribe-input:focus {
+  background-color: #e6e6e6;
+}
+
+.subscribe-input:active {
+  background-color: #f2f2f2;
+  outline: 2px solid #000000;
+  outline-offset: -2px;
 }
 
 /* КАТАЛОГ */
 
 .catalog-container {
   min-height: 307px;
-  background-color: #68A2CA;
-  color: #FFFFFF;
+  background-color: #68a2ca;
+  color: #ffffff;
   background-image: url("../images/catalog/catalog-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -418,19 +588,63 @@ body {
 /* Хлебные крошки */
 
 .breadcrumbs {
+  display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 .breadcrumbs-link {
+  display: block;
+  position: relative;
   font-size: 16px;
   line-height: 21px;
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
+  cursor: pointer;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 8px;
+  padding-bottom: 10px;
 }
 
-/* Фильтры */
+.breadcrumbs-item:first-child {
+  margin-left: -10px;
+}
+
+.breadcrumbs-item:not(:first-child) .breadcrumbs-link  {
+  margin-left: 8px;
+}
+
+.breadcrumbs-link:hover {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.breadcrumbs-link:focus {
+  color: #ffffff;
+}
+
+.breadcrumbs-link:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.breadcrumbs-item:not(:first-child) .breadcrumbs-link::before {
+  display: block;
+  position: absolute;
+  content: "";
+  background-image: url("../images/catalog/svg/breadcrumbs-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 8px;
+  height: 12px;
+  top: 13px;
+  left: -8px;
+}
+
+/* ФИЛЬТРЫ */
+
+/* Расположение фильтров */
 
 .catalog-filter-form {
   display: flex;
@@ -441,7 +655,22 @@ body {
   padding: 0;
   border: none;
   margin-right: 70px;
+  min-width: 150px;
 }
+
+/* Кнопки фильтра */
+
+.filter-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.filter-buttons .button:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+/* Списки фильтров */
 
 .filter-list {
   list-style: none;
@@ -463,54 +692,179 @@ body {
 }
 
 .control-label {
-  display: inline-block;
+  display: block;
+  padding-left: 16px;
   font-size: 18px;
   line-height: 23px;
 }
 
-/* Кнопки фильтра */
+/* Чекбоксы и радиокнопки */
 
-.filter-buttons {
+.control {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  align-items: center;
+  cursor: pointer;
 }
 
-.filter-buttons .button:not(:last-child) {
-  margin-bottom: 32px;
+.control-mark {
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 4px;
 }
 
-/* Слайдер */
+.control-radio {
+  position: relative;
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 50%;
+}
+
+.control-input:checked + .control-mark {
+  background-image: url("../images/catalog/svg/control-mark.svg");
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
+.control-input:checked + .control-radio {
+  background-color: #3f5e72;
+  box-shadow: inset 0 0 0 5px #ffffff;
+}
+
+.control:hover {
+  opacity: 60%;
+}
+
+.control-input:focus + .control-mark, .control-input:focus + .control-radio {
+  outline: 3px solid #83b3d3;
+}
+
+.control:active {
+  opacity: 30%;
+}
+
+/* СЛАЙДЕР */
 
 .filter-price {
   display: flex;
   flex-wrap: wrap;
-  font-size: 18px;
-  line-height: 24px;
+  justify-content: space-between;
+  width: 288px;
   margin: 0;
-  margin-left: auto;
   padding: 0;
   border: none;
+  font-size: 18px;
+  line-height: 24px;
+  margin-left: auto;
+  margin-right: 70px;
+}
+
+.filter-label {
+  position: relative;
+  display: flex;
 }
 
 .filter-input {
   width: 103px;
+  font-weight: 700;
+  padding: 12px 20px;
   font-family: inherit;
   font-size: 18px;
   line-height: 24px;
-  font-weight: 700;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border: none;
-  padding: 12px 20px;
+  outline: none;
+  appearance: textfield;
+}
+
+.filter-input[name="min-price"] {
+  border-radius: 4px 0 0 4px;
+}
+
+.filter-input[name="max-price"] {
+  border-radius: 0 4px 4px 0;
+}
+
+.filter-input:hover {
+  background-color: #e6e6e6;
+}
+
+.filter-input:focus {
+  background-color: #e6e6e6;
+  outline: 3px solid #83b3d3;
+}
+
+.filter-input:active {
+  background-color: #f2f2f2;
+  outline: 2px solid #000000;
+  outline-offset: -2px;
+}
+
+.label-text {
+  position: absolute;
+  display: block;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  opacity: 30%;
+  right: 12px;
+  top: 12px;
+}
+
+/* Трек */
+
+.range-scale {
+  position: relative;
+  width: 287px;
+  height: 4px;
+  background-color: rgb(255, 255, 255, 0.3);
+  margin-top: 44px;
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  top: -8px;
+  cursor: pointer;
+}
+
+.toggle-min {
+  left: 0;
+}
+
+.toggle-max {
+  right: 0;
+}
+
+.range-toggle:focus {
+  outline: 3px solid #83b3d3;
+}
+
+.range-toggle:active {
+  outline: 2px solid #83b3d3;
 }
 
 /* Сортировка гостиниц */
 
 .catalog-content {
   width: 1060px;
-  padding-left: 70px;
-  padding-right: 70px;
-  padding-top: 50px;
+  padding: 50px 70px 0;
 }
 
 .catalog-sorting {
@@ -535,12 +889,91 @@ body {
 
 /* Форма сортировки */
 
+.sorting-form {
+  width: 292px;
+  margin-right: 70px;
+}
+
 .select-control {
-  width: 252px;
+  width: 100%;
+  padding: 14px 52px;
   padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 14px;
-  padding-bottom: 14px;
+  font: inherit;
+  font-size: 18px;
+  line-height: 21px;
+  appearance: none;
+  background-color: #ffffff;
+  background-image: url("../images/catalog/svg/sorting-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center right 20px;
+  border: none;
+  border-radius: 4px;
+  outline: 2px solid #e5e5e5;
+  outline-offset: -2px;
+}
+
+.select-control:hover, .select-control:focus {
+  outline: 2px solid #68a2ca;
+}
+
+.select-control:active {
+  outline: 2px solid #3f5e72;
+}
+
+.select-control:disabled {
+  outline: 2px solid #000000;
+  opacity: 30%;
+}
+
+/* Значки сортировки */
+
+.view {
+  min-width: 160px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.view-button {
+  display: block;
+  width: 48px;
+  height: 48px;
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+  outline: 2px solid #e5e5e5;
+  outline-offset: -2px;
+}
+
+.view-button-current {
+  outline: 2px solid #000000;
+}
+
+.view-button:not(:first-child) {
+  margin-left: 8px;
+}
+
+.view-table {
+  background-image: url("../images/catalog/svg/view-table.svg");
+}
+
+.view-slide {
+  background-image: url("../images/catalog/svg/view-slide.svg");
+}
+
+.view-list {
+  background-image: url("../images/catalog/svg/view-list.svg");
+}
+
+.view-button:hover {
+  outline: 2px solid #000000;
+}
+
+.view-button:focus {
+  outline: 2px solid #68a2ca;
+}
+
+.view-button:active {
+  outline: 2px solid #000000;
 }
 
 /* Список гостиниц */
@@ -564,6 +997,8 @@ body {
   grid-template-columns: repeat(2, 140px);
   row-gap: 16px;
   column-gap: 20px;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
 }
 
 .hotels-link {
@@ -618,6 +1053,11 @@ body {
 .hotels-stars {
   grid-row: 4;
   grid-column: 1;
+  display: block;
+  margin: auto 0;
+  background-image: url("../images/catalog/svg/rating-star.svg");
+  background-repeat: repeat-x;
+  height: 17px;
 }
 
 .hotels-rating {
@@ -632,12 +1072,58 @@ body {
   padding-right: 22px;
 }
 
+.hotels-link:hover, .hotels-link:focus {
+  color: #756157;
+  outline: none;
+}
+
+.hotels-link:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+.hotels-link:hover .hotels-image, .hotels-link:focus .hotels-image {
+  opacity: 60%;
+}
+
+.hotels-link:focus .hotels-image {
+  opacity: 100%;
+  outline: 3px solid #68a2ca;
+}
+
+.hotels-link:active .hotels-image {
+  opacity: 30%;
+}
+
+/* Звёзды */
+
+.hotels-stars-one {
+  width: 24px;
+}
+
+.hotels-stars-two {
+  width: 42px;
+}
+
+.hotels-stars-three {
+  width: 66px;
+}
+
+.hotels-stars-four {
+  width: 90px;
+}
+
+.hotels-stars-five {
+  width: 114px;
+}
+
 /* Пагинация */
 
 .pagination-list {
   list-style: none;
   display: flex;
+  margin: 0;
   padding: 40px 0 60px;
+  border-top: 1px solid #e6e6e6;
 }
 
 .pagination-link {
@@ -649,7 +1135,23 @@ body {
   margin-right: 8px;
 }
 
-.pagination-current, .pagination-more {
+.pagination-current {
   color: #000000;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
+}
+
+.pagination-more {
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.pagination-current:hover, .pagination-current:focus, .pagination-more:hover, .pagination-more:focus {
+  color: #000000;
+  background-color: #f2f2f2;
+  outline: 3px solid #83b3d3;
+  outline-offset: -3px;
+}
+
+.pagination-current:active, .pagination-more:active {
+  color: rgba(0, 0, 0, 0.3);
 }
