--- a/styles/styles.css
+++ b/styles/styles.css
@@ -799,7 +799,7 @@ body {
   outline: 3px solid #83b3d3;
 }
 
-.filter-input:active {
+.filter-input:valid.filter-input:focus, .filter-input:active {
   background-color: #f2f2f2;
   outline: 2px solid #000000;
   outline-offset: -2px;
@@ -1154,4 +1154,328 @@ body {
 
 .pagination-current:active, .pagination-more:active {
   color: rgba(0, 0, 0, 0.3);
+}
+
+/* МОДАЛЬНОЕ ОКНО */
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+}
+
+.modal-hidden {
+  display: none;
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  background-color: #FFFFFF;
+  min-width: 577px;
+  padding: 64px 70px;
+  text-align: left;
+  border-radius: 30px;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+}
+
+.modal-title {
+  margin-bottom: 64px;
+}
+
+/* Кнопка закрытия модального окна */
+
+.modal-close {
+  position: absolute;
+  padding: 0;
+  top: 64px;
+  right: 52px;
+  width: 52px;
+  height: 52px;
+  border: none;
+  background-color: #F2F2F2;
+  color: #000000;
+  border-radius: 50%;
+}
+
+.close-icon {
+  margin: 0 auto;
+  display: flex;
+}
+
+.modal-close:hover {
+  background-color: #E6E6E6;
+}
+
+.modal-close:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.modal-close:active {
+  background-color: #E6E6E6;
+  color:rgba(0, 0, 0, 0.3);
+}
+
+/* Форма модального окна */
+
+.modal-group {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  border: none;
+}
+
+.date-container {
+  margin-bottom: 23px;
+}
+
+.modal-label {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #000000;
+  text-transform: capitalize;
+  padding-right: 24px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.date-input {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  padding: 12px 20px;
+  width: 400px;
+  border: none;
+  outline: none;
+  color: #000000;
+  border-radius: 4px;
+  margin-bottom: 4px;
+}
+
+.date-input::placeholder {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  opacity: 60%;
+}
+
+.date-input:hover {
+  background-color: #E6E6E6;
+}
+
+.date-input:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.date-input:valid.date-input:focus {
+  outline: 3px solid #000000;
+}
+
+.date-input:active {
+  outline: 2px solid #000000;
+}
+
+.date-calendar {
+  position: absolute;
+  width: 48px;
+  height: 48px;
+  background-color: transparent;
+  background-image: url("../images/modal/calendar.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  opacity: 30%;
+  border-radius: 4px;
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
+  z-index: 1;
+}
+
+.date-calendar:hover {
+  opacity: 100%;
+}
+
+.date-calendar:focus {
+  opacity: 100%;
+  outline: 3px solid #83B3D3;
+  outline-offset: -3px;
+}
+
+.date-calendar:active {
+  opacity: 30%;
+}
+
+.date-warning {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  margin-left: 137px;
+  font-size: 16px;
+  line-height: 21px;
+  color: #333333;
+}
+
+.date-warning-error {
+  color: #FF5757;
+}
+
+/* Количество гостей */
+
+.guests {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 48px;
+}
+
+.guests-container {
+  display: flex;
+  flex-wrap: wrap;
+  height: 48px;
+}
+
+.guests-label {
+  display: block;
+  padding-right: 46px;
+}
+
+.guests-label-children {
+  padding-right: 82px;
+}
+
+.guests-input {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  display: block;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  width: 31px;
+  height: 48px;
+  text-align: center;
+  appearance: textfield;
+}
+
+.guests-input::placeholder {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  color: #000000;
+}
+
+.guests-button {
+  display: block;
+  width: 40px;
+  height: 48px;
+  opacity: 30%;
+  background-color: #FFFFFF;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
+
+.guests-icon {
+  border-radius: 4px;
+}
+
+.guests-button:hover, .guests-button:focus {
+  opacity: 100%;
+}
+
+.guests-button:focus .guests-icon {
+  outline: 3px solid #82B3D3;
+}
+
+.guests-button:active {
+  opacity: 20%;
+}
+
+/* Тултип */
+
+.tooltip-container {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tooltip {
+  position: absolute;
+  left: 59px;
+  top: 12px;
+}
+
+.tooltip-toggle {
+  display: block;
+  width: 26px;
+  height: 26px;
+  background-color: #83B3D3;
+  background-image: url("../images/modal/tooltip.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 0;
+  margin: 0;
+  border: none;
+  border-radius: 50%;
+}
+
+.tooltip-text {
+  width: 216px;
+  background-color: #333333;
+  color: #FFFFFF;
+  font-size: 16px;
+  line-height: 20px;
+  padding-left: 22px;
+  padding-right: 18px;
+  padding-top: 15px;
+  padding-bottom: 18px;
+  border-radius: 10px;
+  position: absolute;
+  -webkit-transform: translateX(-45%) translateY(15px);
+  transform: translateX(-45%) translateY(15px);
+  z-index: 1;
+  display: none;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+}
+
+.tooltip-text::before {
+  content:"";
+  position:absolute;
+  background-image: url("../images/modal/tooltip-arrow.svg");
+  width: 19px;
+  height: 9px;
+  bottom: 100%;
+  left:0;
+  right:0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
+}
+
+/* Кнопка модального окна */
+
+.modal-button {
+  margin-top: 25px;
+  display: block;
+  width: 100%;
 }
