--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 1 version
+*/
+
 /* Шрифты */
 
 @font-face {
@@ -539,6 +546,38 @@ body {
   border-radius: 0 4px 4px 0;
 }
 
+.subscribe-input::-webkit-input-placeholder {
+  font-family: "PT Sans", sans-serif;
+  color: #000000;
+  opacity: 60%;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.subscribe-input::-moz-placeholder {
+  font-family: "PT Sans", sans-serif;
+  color: #000000;
+  opacity: 60%;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.subscribe-input:-ms-input-placeholder {
+  font-family: "PT Sans", sans-serif;
+  color: #000000;
+  opacity: 60%;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.subscribe-input::-ms-input-placeholder {
+  font-family: "PT Sans", sans-serif;
+  color: #000000;
+  opacity: 60%;
+  font-size: 18px;
+  line-height: 24px;
+}
+
 .subscribe-input::placeholder {
   font-family: "PT Sans", sans-serif;
   color: #000000;
@@ -779,7 +818,13 @@ body {
   background-color: #f2f2f2;
   border: none;
   outline: none;
-  appearance: textfield;
+  -webkit-appearance: textfield;
+     -moz-appearance: textfield;
+          appearance: textfield;
+}
+
+.filter-input::-webkit-outer-spin-button, .filter-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
 
 .filter-input[name="min-price"] {
@@ -802,7 +847,6 @@ body {
 .filter-input:valid.filter-input:focus, .filter-input:active {
   background-color: #f2f2f2;
   outline: 2px solid #000000;
-  outline-offset: -2px;
 }
 
 .label-text {
@@ -901,7 +945,9 @@ body {
   font: inherit;
   font-size: 18px;
   line-height: 21px;
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   background-color: #ffffff;
   background-image: url("../images/catalog/svg/sorting-arrow.svg");
   background-repeat: no-repeat;
@@ -979,7 +1025,9 @@ body {
 /* Список гостиниц */
 
 .hotels-list {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 340px 20px 340px 20px 340px;
   grid-template-columns: repeat(3, 340px);
   gap: 20px;
   list-style: none;
@@ -993,15 +1041,20 @@ body {
 .hotels-card {
   width: 298px;
   padding: 20px;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 140px 20px 140px;
   grid-template-columns: repeat(2, 140px);
   row-gap: 16px;
-  column-gap: 20px;
+  -webkit-column-gap: 20px;
+     -moz-column-gap: 20px;
+          column-gap: 20px;
   border: 1px solid #e6e6e6;
   border-radius: 4px;
 }
 
 .hotels-link {
+  -ms-grid-row: 1;
   grid-row: 1;
   grid-column: -1/1;
   color: #000000;
@@ -1023,14 +1076,18 @@ body {
 }
 
 .hotels-description {
+  -ms-grid-row: 2;
   grid-row: 2;
+  -ms-grid-column: 1;
   grid-column: 1;
   font-size: 18px;
   line-height: 21px;
 }
 
 .hotels-price {
+  -ms-grid-row: 2;
   grid-row: 2;
+  -ms-grid-column: 2;
   grid-column: 2;
   font-size: 18px;
   line-height: 21px;
@@ -1039,7 +1096,9 @@ body {
 }
 
 .hotels-button {
+  -ms-grid-row: 3;
   grid-row: 3;
+  -ms-grid-column: 1;
   grid-column: 1;
   width: 120px;
   font-size: 16px;
@@ -1047,11 +1106,14 @@ body {
 }
 
 .favorite {
+  -ms-grid-column: 2;
   grid-column: 2;
 }
 
 .hotels-stars {
+  -ms-grid-row: 4;
   grid-row: 4;
+  -ms-grid-column: 1;
   grid-column: 1;
   display: block;
   margin: auto 0;
@@ -1061,7 +1123,9 @@ body {
 }
 
 .hotels-rating {
+  -ms-grid-row: 4;
   grid-row: 4;
+  -ms-grid-column: 2;
   grid-column: 2;
   font-size: 16px;
   line-height: 20px;
@@ -1260,6 +1324,42 @@ body {
   margin-bottom: 4px;
 }
 
+.date-input::-webkit-input-placeholder {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  opacity: 60%;
+}
+
+.date-input::-moz-placeholder {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  opacity: 60%;
+}
+
+.date-input:-ms-input-placeholder {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  opacity: 60%;
+}
+
+.date-input::-ms-input-placeholder {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  opacity: 60%;
+}
+
 .date-input::placeholder {
   font-family: inherit;
   font-weight: 700;
@@ -1368,7 +1468,41 @@ body {
   width: 31px;
   height: 48px;
   text-align: center;
-  appearance: textfield;
+  -webkit-appearance: textfield;
+     -moz-appearance: textfield;
+          appearance: textfield;
+}
+
+.guests-input::-webkit-input-placeholder {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  color: #000000;
+}
+
+.guests-input::-moz-placeholder {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  color: #000000;
+}
+
+.guests-input:-ms-input-placeholder {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  color: #000000;
+}
+
+.guests-input::-ms-input-placeholder {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  color: #000000;
 }
 
 .guests-input::placeholder {
@@ -1441,10 +1575,7 @@ body {
   color: #FFFFFF;
   font-size: 16px;
   line-height: 20px;
-  padding-left: 22px;
-  padding-right: 18px;
-  padding-top: 15px;
-  padding-bottom: 18px;
+  padding: 15px 18px 18px 22px;
   border-radius: 10px;
   position: absolute;
   -webkit-transform: translateX(-45%) translateY(15px);
