--- a/styles/styles.css
+++ b/styles/styles.css
@@ -165,6 +165,7 @@ body {
 .navigation-button {
   font-size: 16px;
   line-height: 20px;
+  padding: 8px 34px;
   margin-left: 20px;
 }
 
@@ -277,7 +278,9 @@ body {
   width: 1060px;
   padding: 40px 70px 30px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .social-list {
@@ -325,6 +328,7 @@ body {
 }
 
 .htmlacademy-link {
+  display: block;
   width: 115px;
   color: #000000;
 }
@@ -423,7 +427,7 @@ body {
   color: #ffffff;
 }
 
-.reason-title::after {
+.reason-title:not(.services-title)::after {
   display: block;
   position: relative;
   top: 30px;
@@ -449,7 +453,7 @@ body {
   padding: 64px 200px;
 }
 
-.services-title {
+.services-heading {
   margin-bottom: 20px;
 }
 
@@ -461,6 +465,10 @@ body {
   line-height: 21px;
   background-color: rgba(131, 179, 211, 0.12);
   background-position: bottom 233px left 50%;
+}
+
+.services-title {
+  margin-bottom: 30px;
 }
 
 .services-housing {
