Исправляет проект по результатам первой защиты

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,6 +97,7 @@ body {
   padding: 8px 50px;
   cursor: pointer;
   border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .button-link {
@@ -134,7 +135,7 @@ body {
   font-size: 16px;
   line-height: 20px;
   padding: 8px 10px;
-  min-width: 171px;
+  min-width: 191px;
 }
 
 .button-reset {
@@ -172,7 +173,7 @@ body {
 .hotels-button {
   font-size: 16px;
   line-height: 20px;
-  min-width: 120px;
+  min-width: 140px;
   padding: 8px 10px;
 }
 
@@ -349,19 +350,12 @@ body {
 .hero {
   color: #ffffff;
   background-color: #68a2ca;
-  background-image: url("../images/index/hero-background.jpg");
+  background-image: url("../images/index/svg/hero-divider.svg"), url("../images/index/hero-background.jpg");
   background-size: 100% auto;
+  background-position: bottom;
   background-repeat: no-repeat;
   height: 434px;
   padding-top: 51px;
-}
-
-.hero-divider {
-  background-position: bottom;
-  background-image: url("../images/index/svg/hero-divider.svg");
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-  height: inherit;
 }
 
 /* Преимущества */
@@ -594,12 +588,34 @@ body {
   line-height: 24px;
 }
 
-.subscribe-input:hover, .subscribe-input:focus {
-  background-color: #e6e6e6;
+.subscribe-input:hover {
+  background-color: #E6E6E6;
+}
+
+.subscribe-input:focus {
+  outline: 2px solid #000000;
+  outline-offset: -2px;
+}
+
+.subscribe-input:-moz-placeholder-shown:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+  outline-offset: 0;
+}
+
+.subscribe-input:-ms-input-placeholder:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+  outline-offset: 0;
+}
+
+.subscribe-input:placeholder-shown:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+  outline-offset: 0;
 }
 
 .subscribe-input:active {
-  background-color: #f2f2f2;
   outline: 2px solid #000000;
   outline-offset: -2px;
 }
@@ -613,6 +629,7 @@ body {
   background-image: url("../images/catalog/catalog-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   text-align: left;
   padding: 70px;
   padding-top: 35px;
@@ -621,14 +638,13 @@ body {
 /* Хедер каталога */
 
 .catalog-header {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .catalog-header-title {
   font-size: 60px;
   line-height: 78px;
   margin: 0;
-  margin-bottom: 8px;
   padding: 0;
 }
 
@@ -700,6 +716,7 @@ body {
 .filter-group {
   margin: 0;
   padding: 0;
+  padding-bottom: 3px;
   border: none;
   margin-right: 70px;
   min-width: 150px;
@@ -818,6 +835,7 @@ body {
 
 .filter-input {
   width: 103px;
+  height: 24px;
   font-weight: 700;
   padding: 12px 20px;
   font-family: inherit;
@@ -864,7 +882,7 @@ body {
   line-height: 24px;
   color: #000000;
   opacity: 30%;
-  right: 12px;
+  right: 20px;
   top: 12px;
 }
 
@@ -876,6 +894,7 @@ body {
   height: 4px;
   background-color: rgb(255, 255, 255, 0.3);
   margin-top: 44px;
+  margin-bottom: 8px;
 }
 
 .range-bar {
@@ -887,6 +906,7 @@ body {
 .range-toggle {
   position: absolute;
   display: block;
+  box-sizing: border-box;
   width: 20px;
   height: 20px;
   background-color: #ffffff;
@@ -937,6 +957,7 @@ body {
 
 .sorting-wrapper {
   display: flex;
+  align-items: center;
 }
 
 /* Форма сортировки */
@@ -966,7 +987,15 @@ body {
   outline-offset: -2px;
 }
 
-.select-control:hover, .select-control:focus {
+.select-control:hover {
+  outline: 2px solid #68a2ca;
+}
+
+.select-control:focus {
+  outline: 2px solid #3f5e72;
+}
+
+.select-control:focus-visible {
   outline: 2px solid #68a2ca;
 }
 
@@ -1057,8 +1086,9 @@ body {
   -webkit-column-gap: 20px;
      -moz-column-gap: 20px;
           column-gap: 20px;
-  border: 1px solid #e6e6e6;
+  border: none;
   border-radius: 4px;
+  outline: 1px solid #e6e6e6;
 }
 
 .hotels-link {
@@ -1142,6 +1172,7 @@ body {
   padding-top: 9px;
   padding-bottom: 8px;
   padding-right: 22px;
+  background-color: #f2f2f2;
 }
 
 .hotels-link:hover, .hotels-link:focus {
@@ -1194,7 +1225,7 @@ body {
   list-style: none;
   display: flex;
   margin: 0;
-  padding: 40px 0 60px;
+  padding: 39px 0 60px;
   border-top: 1px solid #e6e6e6;
 }
 
@@ -1327,6 +1358,7 @@ body {
   width: 400px;
   border: none;
   outline: none;
+  background-color: #F2F2F2;
   color: #000000;
   border-radius: 4px;
   margin-bottom: 4px;
@@ -1382,16 +1414,31 @@ body {
 }
 
 .date-input:focus {
-  background-color: #E6E6E6;
-  outline: 3px solid #83B3D3;
+  outline: 2px solid #000000;
+  outline-offset: -2px;
 }
 
-.date-input:valid.date-input:focus {
-  outline: 3px solid #000000;
+.date-input:-moz-placeholder-shown:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+  outline-offset: 0;
+}
+
+.date-input:-ms-input-placeholder:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+  outline-offset: 0;
+}
+
+.date-input:placeholder-shown:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+  outline-offset: 0;
 }
 
 .date-input:active {
   outline: 2px solid #000000;
+  outline-offset: -2px;
 }
 
 .date-calendar {
@@ -1541,6 +1588,10 @@ body {
   opacity: 100%;
 }
 
+.guests-button:focus-within {
+  outline: none;
+}
+
 .guests-button:focus .guests-icon {
   outline: 3px solid #82B3D3;
 }
@@ -1604,6 +1655,10 @@ body {
   right:0;
   margin-left: auto;
   margin-right: auto;
+}
+
+.tooltip-toggle:focus-within {
+  outline: none;
 }
 
 .tooltip-toggle:hover + .tooltip-text,
